mobile-friendly/mf-css/home.css
:root,
    :root.dark0 { /*Royal Dusk*/
        --background-color: #31323c;
        --text-color: #bfc0d1;
        --reverse-text-color: #31323c;
        --accent-1: #1e202c;
        --accent-2: #bfc0d1;
        --accent-3: #60519b;
        --filter-color: #dda7ff7e;
        --box-shadow: 0px 0px 15px #dda7ff7e;
        --warning: #b80303;
    }
    :root.dark0 { /*Royal Midnight*/
        --background-color: #1e202c;
        --text-color: #bfc0d1;
        --reverse-text-color: #1e202c;
        --accent-1: #31323c;
        --accent-2: #bfc0d1;
        --accent-3: #60519b;
        --filter-color: #dda7ff7e;
        --box-shadow: 0px 0px 15px #dda7ff7e;
        --warning: #b80303;
    }
    /* dark theme number 1 */
    /* :root.dark1 {
        --background-color: #24184b;
        --text-color: #dda7ff;
        --reverse-text-color: #24184b;
        --accent-1: #563d76;
        --accent-2: #fbd160;
        --accent-3: #1b85a6;
        --filter-color: #dda7ff7e;
        --box-shadow: 0px 0px 15px #dda7ff7e;
        --warning: #b80303;
    } */
    /*dark theme number 2 */
    /* :root.dark2 {
        --background-color: #2f1f45;
        --text-color: #f9e7e7;
        --reverse-text-color: #2f1f45;
        --accent-1: #00416c;
        --accent-2: #b96ac9;
        --accent-3: #f9dbbd;
        --filter-color: #f9e7e77e;
        --box-shadow: 0px 0px 15px #f9e7e77e;
        --warning: #b80303;
    } */
    /*dark theme number 3*/
    /* :root.dark3 {
        --background-color: #312257;
        --text-color: #f9dbbd;
        --reverse-text-color: #312257;
        --accent-1: #502163;
        --accent-2: #ffc680;
        --accent-3: #3c7e85;
        --filter-color: #f9dbbd7e;
        --box-shadow: 0px 0px 15px #f9dbbd7e;
        --warning: #b80303;
    } */
    :root.light0 {
        --background-color: #bfc0d1;
        --text-color: #1e202c;
        --reverse-text-color: #bfc0d1;
        --accent-1: #60519b;
        --accent-2: #31323c;
        --accent-3: #60519b;
        --filter-color: #dda7ff7e;
        --box-shadow: 0px 0px 15px #dda7ff7e;
        --warning: #b80303;
    }
    /* light theme number 1 */
    :root.light1{
        --background-color: #f0d9ff;
        --text-color: #2e1f60;
        --reverse-text-color: #f0d9ff;
        --accent-1: #c099d8;
        --accent-2: #e1ba7a;
        --accent-3: #00738a;
        --filter-color: #2e1f607e;
        --box-shadow: 5px 5px 12px #2e1f607e;
        --text-shadow: 0px 0px 10px #f0d9ff;
        --warning: #b80303;
    }
    /*light theme number 2 */
    :root.light2 {
        --background-color: #f9e7e7;
        --text-color: #2f1f45;
        --reverse-text-color: #f9e7e7;
        --accent-1: #f9dbbd;
        --accent-2: #b96ac9;
        --accent-3: #00416c;
        --filter-color: #2f1f457e;
        --box-shadow: 5px 5px 12px #2e1f607e;
        --text-shadow: 0px 0px 10px var(--accent-2);
        --warning: #b80303;
    }




/**MOBILE*/
@media only screen and (min-width: 200px) {
    .project-select-wrapper {
        display: flex;
        justify-content: end;
        align-items: center;
        width: 100%;
        height: 4em;
        padding-right: 0.8em;
    }
    .project-select {
        display: flex;
        /* position: relative; */
        justify-content: center;
        align-items: center;
        /* min-width: fit-content; */
        max-width: 12em;
        height: 3em;
        background-color: var(--accent-1);
        border-radius: 14px;
        padding: 0 1em;
        cursor: pointer;
        white-space:pre-wrap;
    }
    .fa-caret-down {
        margin-left: 0.5em;
    }
    .project-select-popup-wrapper {
        display: none;
        z-index: 10;
        position: absolute;
        justify-content: center;
        /* align-items: center; */
        width: 100%;
        height: 100%;
        -webkit-backdrop-filter: blur(5px);
        backdrop-filter: blur(5px);
    }
    .project-select-popup {
        display: flex;
        z-index: 1;
        flex-direction: column;
        height: fit-content;
        width: 90%;
        background-color: var(--accent-1);
        border: 2px solid var(--accent-3);
        border-radius: 16px;
        padding: 1em 1em 0 1em;
        margin-top: 6em;
    }
    .project-select-content {
        display: flex;
        /* justify-content: center; */
        align-items: center;
        height: 6em;
        /* padding: 0.5em; */
        /* border-bottom: 1px solid var(--accent-3); */
        cursor: pointer;
    }
    .project-select-content:hover #popup-project-title {
        color: var(--accent-3);
    }
    .popup-image {
        width: 3em;
        height: fit-content;
        margin-right: 0.5em;
    }
    .project-info {
        display: flex;
        flex-direction: column;
        width: 100%;
    }
    .project-stats {
        display: flex;
    }
    #popup-project-title {
        width: 16em;
        margin-bottom: 0.5em;
        text-overflow:ellipsis;
        white-space:nowrap;
        overflow: hidden;
    }
    #popup-goal, #popup-days-left {
        font-size: 16px;
        width: 50%;
    }
    .button-wrapper {
        display: flex;
        justify-content: end;
        width: 100%;
        padding: 1em 0em;
    }
    #save {
        width: 5em;
        height: 2.5em;
        background-color: var(--text-color);
        border: 2px solid var(--accent-2);
        border-radius: 16px;
        cursor: pointer;
    }
    .current-project-wrapper {
        display: flex;
        justify-content: center;
        align-items: center;
    }
    .current-project-container {
        display: grid;
        width: 100%;
        justify-content: center;
        align-items: center;
        grid-template-columns: auto auto;
        grid-template-rows: auto auto auto;
        row-gap: 1em;
        padding: 0.5em;
        margin: 1.5em 0;
    }
    #area-title {
        text-align: center;
        grid-column: 1 / span 3;
    }
    #project-img {
        justify-self: center;
        /* grid-row: 2 / span 1; */
    }
    #project-img img{
        width: 8em;
        height: fit-content;
    }
    #project-title {
        text-align: center;
        grid-column: span 2;
        /* justify-self: start; */
    }
    #project-summary {
        text-align: center;
        justify-self: center;
        grid-column: span 3;
    }
    .badge-container {
        display: grid;
        grid-template-columns: auto auto auto auto auto;
        justify-content: center;
        align-items: center;
        gap: 1.5em 1em;
        border-top: 2px solid var(--accent-3);
        padding: 1em 0.5em;
        background-color: var(--accent-1);
    }
    #badge-title {
        grid-column: span 5;
        justify-self: center;
    }
}




/**TABLET PORTRAIT*/
@media only screen and (min-width: 720px) {
    .project-select-wrapper {
        padding-right: 2em;
    }
    .project-select-popup {
        width: 60%;
        padding-left: 1em;
    }
    /* .project-select-content {
        height: 6.5em;
    } */
    .popup-image {
        margin-right: 1em;
        border-radius: 4px;
    }
    #popup-project-title {
        width: 20em;
    }
    /* .button-wrapper {
        padding: 1em 2em;
    } */
    .current-project-container {
        column-gap: 2em;
    }
    #project-img {
        grid-row: span 2;
    }
    #project-title {
        grid-column: span 2;
    }
    #project-summary {
        grid-column: span 1;
    }
    .badge-container {
        gap: 2em 1.5em  ;
    }
}




/**TABLE LANDSCAPE or SMALL DESKTOP*/
@media only screen and (min-width: 1000px) {
    .project-select-popup {
        width: 50%;
        padding-left: 1em;
    }
    #popup-project-title {
        width: 21em;
    }
    .button-wrapper {
        padding: 1em 1.5em 1.5em 0;
    }
    .main-wrapper {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        margin-top: 1em;
    }
    .current-project-container {
        margin: 0em 0.5em;
    }
    #area-title {
        padding-bottom: 1em;
    }
    #project-img img{
        width: 12em;
        height: fit-content;
    }
    .badge-container {
        width: 50%;
        background-color: var(--background-color);
        border-top: none;
        border-left: 2px solid var(--accent-3);
    }
}




@media only screen and (min-width: 1400px) {
    .project-select-wrapper {
        padding-right: 3.7em;
    }
    .project-select-popup {
        width: 40%;
        padding: 1.5em 0 0 1.5em;
        margin-top: 8em;
    }
    #popup-project-title {
        width: 22em;
    }
}

